fix: realign close button

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -9,20 +9,9 @@
   right: 0;
 }
 
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 1.3em;
-}
-
-.close-btn:hover {
-  cursor: grab;
-}
-
 .comp-list-item {
-  position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: lowercase;
@@ -33,6 +22,17 @@
   background-color: #F77065;
   border-radius: 5px;
   box-shadow: 2px 2px 6px #888888;
+}
+
+.close-btn {
+  margin: 0 0 0 auto;
+  display: flex;
+  justify-self: end;
+  font-size: 1.3em;
+}
+
+.close-btn:hover {
+  cursor: grab;
 }
 
 .compare-btn {
